syntax = "proto3";

option java_multiple_files = true;
option java_package = "protobuf.clothes";

package clothes;

message ClothesProto {
  string id = 1;
  string name = 2;
  string size = 3;
  int32 quantity = 4;
  double price = 5;
  Payment payment = 6;
  string isbn = 7;
}

enum Payment {
  PAID = 0;
  NOT_PAID = 1;
  IN_SHOP = 2;
}

service ClothesService {
  rpc CreateCloth (CreateClothRequest) returns (CreateClothResponse);
  rpc UpdateCloth (UpdateClothRequest) returns (UpdateClothResponse);
  rpc FindCloth (FindClothRequest) returns (FindClothResponse);
  rpc DeleteCloth (DeleteClothRequest) returns (DeleteClothResponse);
  rpc FindClothByIsbn (FindClothByIsbnRequest) returns (FindClothByIsbnResponse);
  rpc FindClothByFilter (FindClothByFilterRequest) returns (FindClothByFilterResponse);
}

message FindClothByIsbnRequest {
  string isbn = 1;
}

message FindClothByIsbnResponse {
  ClothesProto clothes = 1;
}

message CreateClothRequest {
  string name = 1;
  string size = 2;
  int64 quantity = 3;
  double price = 4;
  string isbn = 5;
}

message CreateClothResponse {
  ClothesProto cloth = 1;
}

message UpdateClothRequest {
  string id = 1;
  string name = 2;
  string size = 3;
  int64 quantity = 4;
  double price = 5;
  Payment payment = 6;
  string isbn = 7;
}

message UpdateClothResponse {
  ClothesProto cloth = 1;
}

message FindClothRequest {
  string id = 1;
}

message FindClothResponse {
  ClothesProto cloth = 1;
}

message DeleteClothRequest {
  string id = 1;
}

message DeleteClothResponse {
  string message = 1;
}

message FindClothByFilterRequest{
  string name = 1;
  string size = 2;
  int32 quantity = 3;
  double price = 4;
  string isbn = 5;
  string emailOfUser = 6;
}

message FindClothByFilterResponse {
  repeated ClothesProto list = 1;
}




